# Campfire

./: .gitignore  API Standards.txt  Campfire Project Structure.txt  README  README.md  alembic.ini  main.py  models.py  pyproject.toml  requirements.txt  standards.txt
alembic/: env.py
alembic/versions/: 2024_04_01_1833-1606fadff157_first_alembic_revision_adding_users_.py
api/: dependencies.py  main.py
api/routes/: login.py  users.py  utils.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  users.py
app/auth/: dependencies.py  validators.py
app/auth/api/routes/: auth.py
app/auth/constants/: __init__.py  endpoints.py  logging_strings.py  messages.py  repository_outcomes.py
app/auth/enums/: otp_status.py
app/auth/models/: pending_otp_model.py  user_session_model.py
app/auth/repositories/: pending_otps_repository.py  user_sessions_repository.py
app/auth/schemas/: otp_schema.py  pending_otp_schema.py  token_schema.py  user_session_schema.py
app/auth/services/: auth_service.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  security.py  validators.py
app/core/constants/: __init__.py  general.py  logging.py  logging_strings.py  repository_outcomes.py  security.py  twilio.py  validation.py
app/core/enums/: app_env.py  log_formats.py  log_levels.py
app/core/logging/: config_dict.py  formatter.py  logger_wrapper.py  uvicorn_color_formatter.py
app/core/repositories/: base_repository.py
app/core/schemas/: response_schemas.py
app/core/services/: base_service.py
app/core/services/interfaces/: sms_service_interface.py
app/core/services/providers/: twilio_sms_service.py
app/crud/: crud_user.py  crud_usersession.py
app/db/: base_class.py  session.py
app/models/: user.py  usersession.py
app/services/: auth_service.py  user_service.py
app/users/: dependencies.py
app/users/api/routes/: users.py
app/users/constants/: __init__.py  endpoints.py  logging_strings.py  messages.py  repository_outcomes.py
app/users/models/: user_model.py
app/users/repositories/: user_repository.py
app/users/schemas/: user_schema.py
app/users/services/: user_service.py
core/: config.py  database.py  security.py
migrations/: README  script.py.mako
migrations/versions/: 2024_04_01_1833-1606fadff157_first_alembic_revision_adding_users_.py  2025_05_29_1005-c9c8338730b1_add_usersession_table_and_update_users_.py  2025_07_31_1704-8f963e342976_initial_schema_setup_for_all_tables.py
models/: message.py  token.py  user.py
project notes/: API Standards.txt  Auth Iterations.txt  Campfire Project Structure.txt  Campfire Tech Stack.txt  Creating event.txt  Google play store release TODOs.txt  High Level Tips on Android Dev.txt  Model Outlines.txt  Separate ideas.txt
